Test code added

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -296,6 +296,8 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    {{ 'task-yogesh.css' | asset_url | stylesheet_tag }}
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
@@ -306,9 +308,9 @@
     {%- if settings.cart_type == 'drawer' -%}
       {%- render 'cart-drawer' -%}
     {%- endif -%}
-
+    {% comment %}
     {% sections 'header-group' %}
-
+    {% endcomment %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
